- Added Main class.

--- a/game.html
+++ b/game.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <!-- MAIN -->
-    <main role="main">
+    <main class="main" role="main">
         <header>
             <div class="box">Score : <score>0</score></div>
             <div class="box">Time : <time>0s</time></div>
