--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body class="login">
     <!-- MAIN -->
-    <main role="main">
+    <main class="main" role="main">
         <div class="logo">
             <img src="./public/images/logo/snake.svg" alt="Snake Battle" title="Snake Battle">
         </div>
