--- a/rating.html
+++ b/rating.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <!-- MAIN -->
-    <main role="main">
+    <main class="main" role="main">
         <div class="card card--small card--center">
             <div class="card__content card__content">
                 <div class="card__contentInfo">
