--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <!-- MAIN -->
-    <main role="main">
+    <main class="main" role="main">
         <div class="row">
             <div class="cell-large-12">
                 <h1>Coming Soon!</h1>
