- Fixed game colors.

--- a/game.html
+++ b/game.html
@@ -55,6 +55,9 @@
 
     <!-- SIDEBAR -->
     <div class="sidebar">
+        <div class="sidebar__item">Score : <score>0</score></div>
+        <div class="sidebar__item">Time : <time>0s</time></div>
+        <div class="sidebar__item">Speed : <speed>0</speed></div>
     </div>
 
     <!-- MAIN -->
@@ -64,7 +67,9 @@
 
     <!-- ASIDE -->
     <aside class="aside">
-
+        <div class="sidebar__item">Score : <score>0</score></div>
+        <div class="sidebar__item">Time : <time>0s</time></div>
+        <div class="sidebar__item">Speed : <speed>0</speed></div>
     </aside>
 
     <!-- FOOTER -->
