--- a/rating.html
+++ b/rating.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </div>
-        <div class="card card--medium card--center">
+        <div class="card card--medium card--center mb--0">
             <div class="card__content">
                 <div class="card__contentInfo">
                     <table class="table">
