--- a/profile.html
+++ b/profile.html
@@ -37,8 +37,8 @@
         <div class="content">
             <div class="header__logo">
                 <img src="./public/images/logo/snake_invert.svg"
-                    alt="Snake Battle"
-                    title="Snake Battle" class="header__logoImage">
+                alt="Snake Battle"
+                title="Snake Battle" class="header__logoImage">
             </div>
             <nav class="header__nav">
                 <ul class="nav nav--right">
@@ -53,18 +53,49 @@
     </header>
     <!-- MAIN -->
     <main class="main" role="main">
-        <div class="row">
-            <div class="cell-large-12">
-                <h1>Coming Soon!</h1>
+      <div class="card card--center card--medium">
+        <div class="card__content">
+            <div class="card__contentInfo">
+                <div class="row">
+                    <div class="cell-large-4">
+                        <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
+                            class="photo"
+                            alt="Name"
+                            title="Name">
+                    </div>
+                    <div class="cell-large-8">
+                        <h6>Profile Settings:</h6>
+                        <form class="form">
+                            <div class="form__fieldset form__fieldset--column">
+                                <label for="inputName">Nickname:</label>
+                                <input type="text" id="inputName" name="name" placeholder="John Doe">
+                                <svg>
+                                    <rect width="100%" height="100%" class="stroke-salmon"></rect>
+                                </svg>
+                            </div>
+                            <div class="form__fieldset form__fieldset--column">
+                                <label for="inputEmail">Email:</label>
+                                <input type="email" id="inputEmail" name="email" placeholder="john.doe@mail.eu">
+                                <svg>
+                                    <rect width="100%" height="100%" class="stroke-salmon"></rect>
+                                </svg>
+                            </div>
+                            <div class="form__fieldset form__fieldset--column">
+                                <button class="button button--large button--medium button--darkblue" type="submit">Save</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
-    </main>
-    <!-- FOOTER -->
-    <footer class="footer">
-        <p>Created with <span>♥</span> by <a href="https://twitter.com/mauroreisvieira" target="_blank">@mauroreisvieira</a> in Portugal</p>
-    </footer>
+    </div>
+</main>
+<!-- FOOTER -->
+<footer class="footer">
+    <p>Created with <span>♥</span> by <a href="https://twitter.com/mauroreisvieira" target="_blank">@mauroreisvieira</a> in Portugal</p>
+</footer>
 
-    <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="public/js/bundle.js"></script>
+<!-- JAVASCRIPT -->
+<script type="text/javascript" src="public/js/bundle.js"></script>
 </body>
 </html>
