--- a/friends.html
+++ b/friends.html
@@ -13,7 +13,7 @@
     <meta name="copyright" content="@mauroreisvieira">
     <meta name="description" content="Snake game using ES6 and Canvas">
     <meta name="keywords" content="">
-    <title>Rating | Snake Battle</title>
+    <title>Friends | Snake Battle</title>
 
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#36f7ce">
@@ -37,15 +37,15 @@
         <div class="content">
             <div class="header__logo">
                 <img src="./public/images/logo/snake_invert.svg"
-                    alt="Snake Battle"
-                    title="Snake Battle" class="header__logoImage">
+                alt="Snake Battle"
+                title="Snake Battle" class="header__logoImage">
             </div>
             <nav class="header__nav">
                 <ul class="nav nav--right">
                     <li class="nav__item "><a href="./game.html" class="nav__itemLink">Game</a></li>
                     <li class="nav__item"><a href="./rating.html" class="nav__itemLink">Rating</a></li>
                     <li class="nav__item nav__item--active"><a href="./friends.html" class="nav__itemLink">Friends</a></li>
-                    <li class="nav__item"><a href="./profile.html" class="nav__itemLink">Profile</a></li>
+                    <li class="nav__item"><a href="./settings.html" class="nav__itemLink">Settings</a></li>
                     <li class="nav__item"><a href="./index.html" class="nav__itemLink">Logout</a></li>
                 </ul>
             </nav>
@@ -53,11 +53,15 @@
     </header>
     <!-- MAIN -->
     <main class="main" role="main">
-        <div class="row">
-            <div class="cell-large-12">
-                <h1>Coming Soon!</h1>
+        <section class="gird">
+            <div class="container">
+                <div class="row">
+                    <div class="cell-large-12 cell-medium-12 cell-small-12">
+                        <h1>Coming Soon!</h1>
+                    </div>
+                </div>
             </div>
-        </div>
+        </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
