--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
     <meta name="copyright" content="@mauroreisvieira">
     <meta name="description" content="Snake game using ES6 and Canvas">
     <meta name="keywords" content="">
-    <title>Rating | Snake Battle</title>
+    <title>Game | Snake Battle</title>
 
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#36f7ce">
@@ -46,7 +46,7 @@
                     <li class="nav__item nav__item--active"><a href="./game.html" class="nav__itemLink">Game</a></li>
                     <li class="nav__item"><a href="./rating.html" class="nav__itemLink">Rating</a></li>
                     <li class="nav__item"><a href="./friends.html" class="nav__itemLink">Friends</a></li>
-                    <li class="nav__item"><a href="./profile.html" class="nav__itemLink">Profile</a></li>
+                    <li class="nav__item"><a href="./settings.html" class="nav__itemLink">Settings</a></li>
                     <li class="nav__item"><a href="./index.html" class="nav__itemLink">Logout</a></li>
                 </ul>
             </nav>
@@ -67,9 +67,9 @@
 
     <!-- ASIDE -->
     <aside class="aside">
-        <div class="sidebar__item">Score : <score>0</score></div>
-        <div class="sidebar__item">Time : <time>0s</time></div>
-        <div class="sidebar__item">Speed : <speed>0</speed></div>
+        <div class="aside__item">Score : <score>0</score></div>
+        <div class="aside__item">Time : <time>0s</time></div>
+        <div class="aside__item">Speed : <speed>0</speed></div>
     </aside>
 
     <!-- FOOTER -->
