--- a/rating.html
+++ b/rating.html
@@ -37,15 +37,15 @@
         <div class="content">
             <div class="header__logo">
                 <img src="./public/images/logo/snake_invert.svg"
-                    alt="Snake Battle"
-                    title="Snake Battle" class="header__logoImage">
+                alt="Snake Battle"
+                title="Snake Battle" class="header__logoImage">
             </div>
             <nav class="header__nav">
                 <ul class="nav nav--right">
                     <li class="nav__item "><a href="./game.html" class="nav__itemLink">Game</a></li>
                     <li class="nav__item nav__item--active"><a href="./rating.html" class="nav__itemLink">Rating</a></li>
                     <li class="nav__item"><a href="./friends.html" class="nav__itemLink">Friends</a></li>
-                    <li class="nav__item"><a href="./profile.html" class="nav__itemLink">Profile</a></li>
+                    <li class="nav__item"><a href="./settings.html" class="nav__itemLink">Settings</a></li>
                     <li class="nav__item"><a href="./index.html" class="nav__itemLink">Logout</a></li>
                 </ul>
             </nav>
@@ -53,69 +53,73 @@
     </header>
     <!-- MAIN -->
     <main class="main" role="main">
-        <div class="card card--small card--center">
-            <div class="card__content card__content">
-                <div class="card__contentInfo">
-                    <div class="row">
-                        <div class="cell-large-4">
-                            <div class="photo">
-                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg"
-                                    alt="Ana Gaspar"
-                                    title="Ana Gaspar">
-                            </div>
-                            <span class="stars">★★★★★</span>
-                        </div>
-                        <div class="cell-large-8">
-                            <div class="details">
-                                <span class="details__position">#1</span>
-                                <span class="details__name">Ana Teodoro Gaspar</span>
-                                <span class="details__scrore">(3400 /pts)</span>
+        <section class="gird">
+            <div class="container">
+                <div class="card card--small card--center">
+                    <div class="card__content card__content">
+                        <div class="card__contentInfo">
+                            <div class="row">
+                                <div class="cell-large-4 cell-medium-4 cell-small-12">
+                                    <div class="photo">
+                                        <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg"
+                                        alt="Ana Gaspar"
+                                        title="Ana Gaspar">
+                                    </div>
+                                    <span class="stars">★★★★★</span>
+                                </div>
+                                <div class="cell-large-8 cell-medium-8 cell-small-12">
+                                    <div class="details">
+                                        <span class="details__position">#1</span>
+                                        <span class="details__name">Ana Teodoro Gaspar</span>
+                                        <span class="details__scrore">(3400 /pts)</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="card card--medium card--center mb--0">
-            <div class="card__content">
-                <div class="card__contentInfo">
-                    <table class="table">
-                        <tbody>
-                            <tr>
-                                <td class="table__image">
-                                    <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
-                                        alt="Mark Dalgleish"
-                                        title="Mark Dalgleish">
-                                </td>
-                                <td class="table_name">Mark Dalgleish</td>
-                                <td class="table__scrore">1000 /pts</td>
-                                <td class="table__stars">★★★★</td>
-                            </tr>
-                            <tr>
-                                <td class="table__image">
-                                    <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
-                                        alt="Mark Dalgleish"
-                                        title="Mark Dalgleish">
-                                </td>
-                                <td class="table_name">Mark Dalgleish</td>
-                                <td class="table__scrore">600 /pts</td>
-                                <td class="table__stars">★★★</td>
-                            </tr>
-                            <tr>
-                                <td class="table__image">
-                                    <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
-                                        alt="Mark Dalgleish"
-                                        title="Mark Dalgleish">
-                                </td>
-                                <td class="table_name">Mark Dalgleish</td>
-                                <td class="table__scrore">340 /pts</td>
-                                <td class="table__stars">★★</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="card card--medium card--center mb--0">
+                    <div class="card__content">
+                        <div class="card__contentInfo">
+                            <table class="table">
+                                <tbody>
+                                    <tr>
+                                        <td class="table__image">
+                                            <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
+                                            alt="Mark Dalgleish"
+                                            title="Mark Dalgleish">
+                                        </td>
+                                        <td class="table_name">Mark Dalgleish</td>
+                                        <td class="table__scrore">1000 /pts</td>
+                                        <td class="table__stars">★★★★</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="table__image">
+                                            <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
+                                            alt="Mark Dalgleish"
+                                            title="Mark Dalgleish">
+                                        </td>
+                                        <td class="table_name">Mark Dalgleish</td>
+                                        <td class="table__scrore">600 /pts</td>
+                                        <td class="table__stars">★★★</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="table__image">
+                                            <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
+                                            alt="Mark Dalgleish"
+                                            title="Mark Dalgleish">
+                                        </td>
+                                        <td class="table_name">Mark Dalgleish</td>
+                                        <td class="table__scrore">340 /pts</td>
+                                        <td class="table__stars">★★</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
