--- a/settings.html
+++ b/settings.html
@@ -13,7 +13,7 @@
     <meta name="copyright" content="@mauroreisvieira">
     <meta name="description" content="Snake game using ES6 and Canvas">
     <meta name="keywords" content="">
-    <title>Rating | Snake Battle</title>
+    <title>Settings | Snake Battle</title>
 
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#36f7ce">
@@ -45,7 +45,7 @@
                     <li class="nav__item "><a href="./game.html" class="nav__itemLink">Game</a></li>
                     <li class="nav__item"><a href="./rating.html" class="nav__itemLink">Rating</a></li>
                     <li class="nav__item"><a href="./friends.html" class="nav__itemLink">Friends</a></li>
-                    <li class="nav__item nav__item--active"><a href="./profile.html" class="nav__itemLink">Profile</a></li>
+                    <li class="nav__item nav__item--active"><a href="./settings.html" class="nav__itemLink">Settings</a></li>
                     <li class="nav__item"><a href="./index.html" class="nav__itemLink">Logout</a></li>
                 </ul>
             </nav>
@@ -53,42 +53,46 @@
     </header>
     <!-- MAIN -->
     <main class="main" role="main">
-      <div class="card card--center card--medium">
-        <div class="card__content">
-            <div class="card__contentInfo">
-                <div class="row">
-                    <div class="cell-large-4">
-                        <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
-                            class="photo"
-                            alt="Name"
-                            title="Name">
-                    </div>
-                    <div class="cell-large-8">
-                        <h6>Profile Settings:</h6>
-                        <form class="form">
-                            <div class="form__fieldset form__fieldset--column">
-                                <label for="inputName">Nickname:</label>
-                                <input type="text" id="inputName" name="name" placeholder="John Doe">
-                                <svg>
-                                    <rect width="100%" height="100%" class="stroke-salmon"></rect>
-                                </svg>
+        <section class="gird">
+            <div class="container">
+              <div class="card card--center card--large">
+                <div class="card__content">
+                    <div class="card__contentInfo">
+                        <div class="row">
+                            <div class="cell-large-4 cell-medium-4 cell-small-12">
+                                <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
+                                class="photo"
+                                alt="Name"
+                                title="Name">
                             </div>
-                            <div class="form__fieldset form__fieldset--column">
-                                <label for="inputEmail">Email:</label>
-                                <input type="email" id="inputEmail" name="email" placeholder="john.doe@mail.eu">
-                                <svg>
-                                    <rect width="100%" height="100%" class="stroke-salmon"></rect>
-                                </svg>
+                            <div class="cell-large-8 cell-medium-8 cell-small-12">
+                                <h6>Profile Settings:</h6>
+                                <form class="form">
+                                    <div class="form__fieldset form__fieldset--column">
+                                        <label for="inputName">Nickname:</label>
+                                        <input type="text" id="inputName" name="name" placeholder="John Doe">
+                                        <svg>
+                                            <rect width="100%" height="100%" class="stroke-salmon"></rect>
+                                        </svg>
+                                    </div>
+                                    <div class="form__fieldset form__fieldset--column">
+                                        <label for="inputEmail">Email:</label>
+                                        <input type="email" id="inputEmail" name="email" placeholder="john.doe@mail.eu">
+                                        <svg>
+                                            <rect width="100%" height="100%" class="stroke-salmon"></rect>
+                                        </svg>
+                                    </div>
+                                    <div class="form__fieldset form__fieldset--column">
+                                        <button class="button button--large button--medium button--yellow" type="submit">Save</button>
+                                    </div>
+                                </form>
                             </div>
-                            <div class="form__fieldset form__fieldset--column">
-                                <button class="button button--large button--medium button--darkblue" type="submit">Save</button>
-                            </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </main>
 <!-- FOOTER -->
 <footer class="footer">
