--- a/rating.html
+++ b/rating.html
@@ -55,7 +55,7 @@
     <main class="main" role="main">
         <section class="gird">
             <div class="container">
-                <div class="card card--small card--center">
+                <div class="card card--medium card--center">
                     <div class="card__content card__content">
                         <div class="card__contentInfo">
                             <div class="row">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card card--medium card--center mb--0">
+                <div class="card card--large card--center mb--0">
                     <div class="card__content">
                         <div class="card__contentInfo">
                             <table class="table">
