- Added method to get avatar.

--- a/settings.html
+++ b/settings.html
@@ -60,10 +60,10 @@
                     <div class="card__contentInfo">
                         <div class="row">
                             <div class="cell-large-4 cell-medium-4 cell-small-12">
-                                <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
-                                class="photo"
-                                alt="Name"
-                                title="Name">
+                                <img src="http://www.gravatar.com/avatar/a1d43ce0a6092c59b8d96bd47a3aae03.jpg?s=220"
+                                    class="photo"
+                                    alt="Name"
+                                    title="Name">
                             </div>
                             <div class="cell-large-8 cell-medium-8 cell-small-12">
                                 <h6>Profile Settings:</h6>
