--- a/settings.html
+++ b/settings.html
@@ -61,6 +61,7 @@
                         <div class="row">
                             <div class="cell-large-4 cell-medium-4 cell-small-12">
                                 <img src="http://www.gravatar.com/avatar/a1d43ce0a6092c59b8d96bd47a3aae03.jpg?s=220"
+                                    id="photoProfile"
                                     class="photo"
                                     alt="Name"
                                     title="Name">
@@ -100,6 +101,6 @@
 </footer>
 
 <!-- JAVASCRIPT -->
-<script type="text/javascript" src="public/js/bundle.js"></script>
+<script type="text/javascript" src="public/js/setting.js"></script>
 </body>
 </html>
