--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="public/js/bundle.js"></script>
+    <script type="text/javascript" src="public/js/auth.js"></script>
 </body>
 </html>
