--- a/friends.html
+++ b/friends.html
@@ -69,6 +69,6 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="public/js/bundle.js"></script>
+    <script type="text/javascript" src="public/js/game.js"></script>
 </body>
 </html>
