- Added list of players in rating.

--- a/rating.html
+++ b/rating.html
@@ -127,6 +127,6 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="public/js/game.js"></script>
+    <script type="text/javascript" src="public/js/rating.js"></script>
 </body>
 </html>
