--- a/settings.html
+++ b/settings.html
@@ -71,20 +71,20 @@
                                 <form class="form">
                                     <div class="form__fieldset form__fieldset--column">
                                         <label for="inputName">Nickname:</label>
-                                        <input type="text" id="inputName" name="name" placeholder="John Doe">
+                                        <input type="text" id="inputName" name="playerName" placeholder="John Doe">
                                         <svg>
                                             <rect width="100%" height="100%" class="stroke-salmon"></rect>
                                         </svg>
                                     </div>
                                     <div class="form__fieldset form__fieldset--column">
                                         <label for="inputEmail">Email:</label>
-                                        <input type="email" id="inputEmail" name="email" placeholder="john.doe@mail.eu">
+                                        <input type="email" id="inputEmail" name="playerEmail" placeholder="john.doe@mail.eu">
                                         <svg>
                                             <rect width="100%" height="100%" class="stroke-salmon"></rect>
                                         </svg>
                                     </div>
                                     <div class="form__fieldset form__fieldset--column">
-                                        <button class="button button--large button--medium button--yellow" type="submit">Save</button>
+                                        <button class="button button--large button--medium button--yellow" type="submit">Save Changes</button>
                                     </div>
                                 </form>
                             </div>
