--- a/rating.html
+++ b/rating.html
@@ -59,7 +59,7 @@
                     <div class="card__content card__content">
                         <div class="card__contentInfo">
                             <div class="row">
-                                <div class="cell-large-4 cell-medium-4 cell-small-12">
+                                <div class="cell-large-3 cell-medium-3 cell-small-12">
                                     <div class="photo">
                                         <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg"
                                         alt="Ana Gaspar"
@@ -67,12 +67,15 @@
                                     </div>
                                     <span class="stars">★★★★★</span>
                                 </div>
-                                <div class="cell-large-8 cell-medium-8 cell-small-12">
+                                <div class="cell-large-7 cell-medium-7 cell-small-12">
                                     <div class="details">
                                         <span class="details__position">#1</span>
                                         <span class="details__name">Ana Teodoro Gaspar</span>
                                         <span class="details__scrore">(3400 /pts)</span>
                                     </div>
+                                </div>
+                                <div class="cell-large-2 cell-medium-2 cell-small-12">
+                                    <span class="winner">🥇</span>
                                 </div>
                             </div>
                         </div>
