- Added Auth method in javascript.

--- a/rating.html
+++ b/rating.html
@@ -62,15 +62,15 @@
                                 <div class="cell-large-3 cell-medium-3 cell-small-12">
                                     <div class="photo">
                                         <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg"
-                                        alt="Ana Gaspar"
-                                        title="Ana Gaspar">
+                                            alt="Bruna M. Santos"
+                                            title="Bruna M. Santos">
                                     </div>
                                     <span class="stars">★★★★★</span>
                                 </div>
                                 <div class="cell-large-7 cell-medium-7 cell-small-12">
                                     <div class="details">
                                         <span class="details__position">#1</span>
-                                        <span class="details__name">Ana Teodoro Gaspar</span>
+                                        <span class="details__name">Bruna M. Santos</span>
                                         <span class="details__scrore">(3400 /pts)</span>
                                     </div>
                                 </div>
@@ -95,26 +95,6 @@
                                         <td class="table_name">Mark Dalgleish</td>
                                         <td class="table__scrore">1000 /pts</td>
                                         <td class="table__stars">★★★★</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="table__image">
-                                            <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
-                                            alt="Mark Dalgleish"
-                                            title="Mark Dalgleish">
-                                        </td>
-                                        <td class="table_name">Mark Dalgleish</td>
-                                        <td class="table__scrore">600 /pts</td>
-                                        <td class="table__stars">★★★</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="table__image">
-                                            <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
-                                            alt="Mark Dalgleish"
-                                            title="Mark Dalgleish">
-                                        </td>
-                                        <td class="table_name">Mark Dalgleish</td>
-                                        <td class="table__scrore">340 /pts</td>
-                                        <td class="table__stars">★★</td>
                                     </tr>
                                 </tbody>
                             </table>
