--- a/rating.html
+++ b/rating.html
@@ -110,6 +110,6 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="public/js/rating.js"></script>
+    <script type="text/javascript" src="public/ts/rating.js"></script>
 </body>
 </html>
