--- a/settings.html
+++ b/settings.html
@@ -127,6 +127,6 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="public/js/settings.js"></script>
+    <script type="text/javascript" src="public/ts/setting.js"></script>
 </body>
 </html>
