--- a/game.html
+++ b/game.html
@@ -78,6 +78,6 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="public/js/game.js"></script>
+    <script type="text/javascript" src="public/ts/game.js"></script>
 </body>
 </html>
